--- a/catalog/templates/catalog/includes/inc_header.html
+++ b/catalog/templates/catalog/includes/inc_header.html
@@ -1,6 +1,6 @@
 <figure>
     <blockquote class="blockquote">
-        <p>Skystore</p>
+        <p>Store</p>
     </blockquote>
     {% if request.user.is_authenticated %}
         <figcaption class="blockquote-footer">
