--- a/catalog/templates/catalog/includes/inc_futer.html
+++ b/catalog/templates/catalog/includes/inc_futer.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 col-md">
-        SkyStore
+        Store
         <small class="d-block mb-3 text-muted">&copy; 2023</small>
     </div>
     <div class="col-6 col-md">
@@ -24,12 +24,12 @@
             <li><a class="text-muted" href="{% url 'catalog:contacts' %}">Контакты</a></li>
         </ul>
     </div>
-    <div class="col-6 col-md">
-        <h5>Заглушка для админки</h5>
-        <h1>admin@example.com</h1>
-        <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="{% url 'admin:index' %}">Вход</a></li>
-        </ul>
-    </div>
+{#    <div class="col-6 col-md">#}
+{#        <h5>Заглушка для админки</h5>#}
+{#        <h1>admin@example.com</h1>#}
+{#        <ul class="list-unstyled text-small">#}
+{#            <li><a class="text-muted" href="{% url 'admin:index' %}">Вход</a></li>#}
+{#        </ul>#}
+{#    </div>#}
 
 </div>
