--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -2,8 +2,8 @@
 {% load my_media %}
 {% block content %}
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Skystore</h1>
-        <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода,
+        <h1 class="display-4">Store</h1>
+        <p class="lead">Store - это отличный вариант хранения ваших плагинов и примеров кода,
             который вы бы хотели продать</p>
         <a href="{% url 'catalog:create' %}" class="btn btn-primary">Новый продукт</a>
         <a href="{% url 'catalog:category_create' %}" class="btn btn-primary">Новая категория</a>
