--- a/catalog/templates/catalog/index_moderator.html
+++ b/catalog/templates/catalog/index_moderator.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% if perms.catalog.can_edit_description %}
         <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h1 class="display-4">Skystore</h1>
+            <h1 class="display-4">Store</h1>
             <p class="lead">Снятые с публикации продукты</p>
             <a href="{% url 'catalog:index' %}" class="btn btn-primary">На главную</a>
         </div>
